# FunASR-SenseVoice-SRT

./: .gitignore  LICENSE  NOTICE.md  README.md  README_JA.md  README_ZH.md  decode.py  en.json  main.py  model.py  pyproject.toml  requirements.txt  translator.py  zh.json
asr/: __init__.py  granite_asr.py
locales/: en.json  ja.json  zh.json
utils/: translator.py
